# NoApi

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  contributors.html  index.html  installation.html  introduction.html  print.html  project.html  running.html  searchindex.js  searchindex.json  toc.html  toc.js
backend/: backend.html  fuctions-rs.html  handlers.html
frontend/: frontend.html  routing.html  rsf.html
noapi/: .gitignore  Cargo.toml  README.md
noapi-functions/: Cargo.toml  README.md
noapi-functions/src/: build_functions.rs  config.rs  js_commands.rs  lib.rs  struct_extractor.rs
noapi/src/: boilerplate.rs  cargo_commands.rs  config.rs  js_commands.rs  lib.rs  main.rs  noapi_config.rs
noapi/try/static/: index.html
template/: .gitignore  Cargo.toml  build.rs  functions.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
template/frontend/: App.tsx  index.html  main.tsx
template/frontend/pages/: 404.tsx  _app.tsx  index.tsx
template/src/: functions.rs  main.rs
template/src/handlers/: functions.rs  mod.rs
template/src/static/: index.html
template/src/static/assets/: index-0DOCJxJm.js  index-B-rB8QDu.js  index-B4AP5Dr0.css  index-B7HM9_2R.js  index-B8J4GM5h.js  index-BHJsHvwI.js  index-BM6DT2dl.js  index-BMK1LAIc.js  index-BO5-0HjI.css  index-BS8oyBm6.js  index-BVB9LE6Q.js  index-BXfynqIr.js  index-Bd3PRzYB.js  index-BdrHWP5V.js  index-BfzJRrX5.js  index-BgEIbFUT.css  index-C0jqBtEG.css  index-COOLdr56.js  index-CioK9Vpl.js  index-CkN4PKjx.js  index-CwbKIM1y.js  index-DN9mW26H.js  index-DOjdlKy2.css  index-DY949JuL.js  index-DfoB2je4.css  index-DlC8WB2d.js  index-Mzes1m-S.js  index-Ox9jqdSp.js  index-YY5b5jtS.js  index-a30Kn7NU.js  index-rpJPh_8Z.js
