[package]
name = "noapi"
version = "0.1.1"
edition = "2021"
authors = ["Kelvin Osei <incrediblemhi2022@gmail.com>"]
description = "A Rust fullstack web framework [Axum + React], with the concept of Rust server actions, utilizes the type safety of Rust and TypeScript to make calls to server without APIs."
homepage = "https://github.com/incrediblemhi/NoApi/tree/main/noapi"
repository = "https://github.com/incrediblemhi/NoApi/tree/main/noapi"
license = "MIT"
keywords = ["webdev", "react", "axum", "full-stack"]
categories = ["web-programming"]

[dependencies]
clap = "4.5.27"
regex = "1.11.1"

