[package]
name = "noapi"
version = "0.1.42"
edition = "2021"
documentation = "https://incrediblemhi.github.io/NoApi/"
authors = ["Kelvin Osei <incrediblemhi2022@gmail.com>"]
description = "A Rust fullstack web framework [Axum + React], with the concept of Rust server actions, utilizes the type safety of Rust and TypeScript to make calls to server without APIs."
homepage = "https://github.com/incrediblemhi/NoApi/tree/main/noapi"
repository = "https://github.com/incrediblemhi/NoApi/tree/main/noapi"
license = "MIT"
keywords = ["webdev", "react", "axum", "full-stack"]
categories = ["web-programming"]

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
dialoguer = "0.11.0"
regex = "1.11.1"
serde = {version = "1.0.217", features = ["derive"]}
toml = "0.8.20"

