[package]
name = "template"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
listenfd = "1.0.2"
tokio = {version = "1.43.0", features = ["full"]}
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs"] }
regex = "1.11.1"
noapi-functions = { path = "../noapi-functions" }
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
tower-livereload = "0.9.6"

[build-dependencies]
noapi-functions = { path = "../noapi-functions" }
